@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1176 2017/09/06 13:59:42 ryoon Exp $
+# $NetBSD: Makefile,v 1.1177 2017/09/08 06:21:30 wiz Exp $
 #
 
 COMMENT=	Networking tools
@@ -555,7 +555,6 @@ SUBDIR+=	p5-Socket6
 SUBDIR+=	p5-Test-DNS
 SUBDIR+=	p5-Test-RequiresInternet
 SUBDIR+=	p5-Test-TCP
-SUBDIR+=	p5-Umph-Prompt
 SUBDIR+=	p5-WebService-Google-Reader
 SUBDIR+=	p5-WebService-MusicBrainz
 SUBDIR+=	p5-WebService-MusicBrainz0
