@@ -1,2 +1,0 @@
-Umph::Prompt is an interactive prompt module for umph and similar
-programs.
