@@ -1,19 +1,0 @@
-# $NetBSD: Makefile,v 1.9 2017/09/03 09:22:58 wiz Exp $
-#
-
-DISTNAME=	Umph-Prompt-0.1.0
-PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	6
-CATEGORIES=	net
-MASTER_SITES=	http://umph.googlecode.com/files/
-
-MAINTAINER=	ryoon@NetBSD.org
-HOMEPAGE=	https://code.google.com/archive/p/umph/
-COMMENT=	Youtube feeds parsing module for umph
-LICENSE=	gnu-lgpl-v2.1
-
-PERL5_PACKLIST=	auto/Umph/Prompt/.packlist
-USE_LANGUAGES=	# none
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
