@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.2 2015/11/04 00:35:25 agc Exp $
-
-SHA1 (Umph-Prompt-0.1.0.tar.gz) = e4ab63a75aea0f2447ae8ed1a26a3baa10589621
-RMD160 (Umph-Prompt-0.1.0.tar.gz) = e61a869d025b8d431a0c1414d15e4e21df129920
-SHA512 (Umph-Prompt-0.1.0.tar.gz) = 6f76b5b013a5bb4957e2646577d879ae4432e7055ec1cf3b7732454a85127f618bcf9fd637f6e92c5b3b383e6e07d5901ff69dfcbc8b529ee0017a26129a2578
-Size (Umph-Prompt-0.1.0.tar.gz) = 15505 bytes
