@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3652 2017/09/08 02:29:16 ryoon Exp $
+$NetBSD: CHANGES-2017,v 1.3653 2017/09/08 06:21:30 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5155,3 +5155,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated devel/gdb to 8.0.1 [kamil 2017-09-07]
 	Updated net/nagios-plugin-dnsrbl to 0.4 [manu 2017-09-08]
 	Updated audio/pulseaudio to 11.0 [ryoon 2017-09-08]
+	Removed net/p5-Umph-Prompt [wiz 2017-09-08]
